--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,10 +23,15 @@ body{
     font-weight: 400;
 }
 
+/* Primeira Seção
+------------------------------------------------------------------------------------- */
+
 .principal{
     background-image: url(../assents/img/Background.png);
     background-size: contain;
     background-repeat: no-repeat;
+    align-items: center;
+    text-align: center;
     
 }
 
@@ -36,9 +41,17 @@ body{
     grid-template-columns: repeat(2,50%);
 }
 
+.container__caixa{
+    margin: 0 6em;
+}
+
 .container__titulo{
     font-size: 28px;
     font-weight: 700;
+}
+
+.container__img{
+    margin: 1em 0 2em 0;
 }
 
 .container__botao{
@@ -48,6 +61,7 @@ body{
     text-decoration: none;
     color: var(--cor-titulo-principal);
     display: block;
+    margin-bottom: 1em;
 }
 
 .botao__secundario{
@@ -58,4 +72,40 @@ body{
 .container__aviso{
     font-size:12px;
     color: var(--cor-secundaria);
+}
+
+/* Segunda Seção
+------------------------------------------------------------------------------------- */
+
+.secundaria{
+    align-items: center;
+    margin: 0 8em;
+}
+
+.secundario_imagem{
+    width: 80%;
+
+}
+
+.container__descricao{
+    padding: 2em;
+}
+
+.descricao__titulo{
+    color: var(--cor-titulo-principal);
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto{
+    color: var(--cor-secundaria);
+    font-size: 1em;
+    font-weight: 400;
+    opacity: 0.8;
+}
+
+.secundaria__botao{
+    display: inline-block;
+    margin-top: 1em;
 }
